--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Image selection/ImageSelectionPopup.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Image selection/ImageSelectionPopup.xib
@@ -12,18 +12,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageSelectionPopup" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
                 <outlet property="buttonsStackView" destination="L0S-dc-dN5" id="oKA-IC-3yH"/>
-                <outlet property="camera" destination="B88-9w-de1" id="rRw-rx-SCM"/>
-                <outlet property="cameraLabel" destination="gzk-eW-9od" id="WuV-CZ-FWb"/>
-                <outlet property="cancel" destination="EXO-2x-gUn" id="KVS-bh-vHm"/>
                 <outlet property="confirm" destination="8Pu-Kh-m90" id="Gpz-cl-Y62"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="IIJ-f4-s8Z"/>
                 <outlet property="delete" destination="BPo-Me-Lni" id="Dbv-kw-KjE"/>
                 <outlet property="descriptionLabel" destination="b9p-zy-nrS" id="VpH-2H-tM2"/>
-                <outlet property="gallery" destination="DPu-Mj-Hh6" id="NTb-Af-8Wd"/>
-                <outlet property="galleryLabel" destination="sCp-Uf-hab" id="Slq-wh-wJL"/>
                 <outlet property="imageView" destination="8JG-4l-DoW" id="vLF-HK-Gw3"/>
                 <outlet property="previewStackView" destination="oIw-ek-q6b" id="zxZ-fO-jov"/>
-                <outlet property="sourceStackView" destination="gAh-Us-y0P" id="GrD-d6-Rqb"/>
                 <outlet property="textView" destination="gX8-Jw-0tR" id="Vfo-fG-twP"/>
                 <outlet property="title" destination="CCd-8D-Vfh" id="1dn-xs-a3h"/>
             </connections>
@@ -35,6 +29,9 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCd-8D-Vfh">
                     <rect key="frame" x="0.0" y="0.0" width="400" height="90"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="90" id="nl8-Yq-iIn"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -43,19 +40,16 @@
                     <rect key="frame" x="0.0" y="510" width="400" height="90"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L0S-dc-dN5">
-                            <rect key="frame" x="64" y="2.5" width="272.5" height="85.5"/>
+                            <rect key="frame" x="128.5" y="11.5" width="143" height="67.5"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EXO-2x-gUn">
-                                    <rect key="frame" x="0.0" y="0.5" width="85.5" height="84.5"/>
-                                </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8Pu-Kh-m90">
-                                    <rect key="frame" x="93.5" y="0.5" width="85.5" height="84.5"/>
+                                    <rect key="frame" x="0.0" y="0.5" width="67.5" height="66.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="8Pu-Kh-m90" secondAttribute="height" multiplier="1:1" id="mzz-ue-EJO"/>
                                     </constraints>
                                 </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trash.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BPo-Me-Lni">
-                                    <rect key="frame" x="187" y="0.5" width="85.5" height="84.5"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trash.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BPo-Me-Lni">
+                                    <rect key="frame" x="75.5" y="0.5" width="67.5" height="66.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="BPo-Me-Lni" secondAttribute="height" multiplier="1:1" id="83d-y9-PDU"/>
                                     </constraints>
@@ -63,62 +57,20 @@
                             </subviews>
                             <constraints>
                                 <constraint firstItem="BPo-Me-Lni" firstAttribute="width" secondItem="BPo-Me-Lni" secondAttribute="height" multiplier="1:1" id="25O-el-A9P"/>
-                                <constraint firstItem="EXO-2x-gUn" firstAttribute="width" secondItem="EXO-2x-gUn" secondAttribute="height" multiplier="1:1" id="R2G-b5-tYe"/>
                             </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="L0S-dc-dN5" firstAttribute="centerX" secondItem="hvd-0A-DbY" secondAttribute="centerX" id="JSS-Ka-Tbe"/>
-                        <constraint firstItem="L0S-dc-dN5" firstAttribute="height" secondItem="hvd-0A-DbY" secondAttribute="height" multiplier="0.95" id="PDF-eF-eIz"/>
+                        <constraint firstItem="L0S-dc-dN5" firstAttribute="height" secondItem="hvd-0A-DbY" secondAttribute="height" multiplier="0.75" id="PDF-eF-eIz"/>
                         <constraint firstItem="L0S-dc-dN5" firstAttribute="centerY" secondItem="hvd-0A-DbY" secondAttribute="centerY" id="vk5-tb-KsE"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3PL-l1-OpK">
                     <rect key="frame" x="0.0" y="90" width="400" height="420"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gAh-Us-y0P">
-                            <rect key="frame" x="0.0" y="143.5" width="400" height="196"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gzk-eW-9od" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="196" height="196"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="B88-9w-de1">
-                                            <rect key="frame" x="39" y="39.5" width="118" height="116"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="B88-9w-de1" secondAttribute="height" multiplier="1:1" id="Fuu-rm-dX3"/>
-                                            </constraints>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <constraints>
-                                        <constraint firstItem="B88-9w-de1" firstAttribute="centerY" secondItem="gzk-eW-9od" secondAttribute="centerY" id="HLn-I2-5ck"/>
-                                        <constraint firstItem="B88-9w-de1" firstAttribute="width" secondItem="gzk-eW-9od" secondAttribute="width" multiplier="0.6" id="rIl-be-J5j"/>
-                                        <constraint firstItem="B88-9w-de1" firstAttribute="centerX" secondItem="gzk-eW-9od" secondAttribute="centerX" id="sVr-6y-nrK"/>
-                                        <constraint firstAttribute="width" secondItem="gzk-eW-9od" secondAttribute="height" multiplier="1:1" id="tb3-c6-kIz"/>
-                                    </constraints>
-                                </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sCp-Uf-hab" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                    <rect key="frame" x="204" y="0.0" width="196" height="196"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DPu-Mj-Hh6">
-                                            <rect key="frame" x="39" y="40" width="118" height="115.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="DPu-Mj-Hh6" secondAttribute="height" multiplier="1:1" id="gOM-i4-bYQ"/>
-                                            </constraints>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <constraints>
-                                        <constraint firstItem="DPu-Mj-Hh6" firstAttribute="centerX" secondItem="sCp-Uf-hab" secondAttribute="centerX" id="7S2-qh-dQW"/>
-                                        <constraint firstItem="DPu-Mj-Hh6" firstAttribute="width" secondItem="sCp-Uf-hab" secondAttribute="width" multiplier="0.6" id="VVN-hS-P0j"/>
-                                        <constraint firstAttribute="width" secondItem="sCp-Uf-hab" secondAttribute="height" multiplier="1:1" id="eUM-Fl-9hh"/>
-                                        <constraint firstItem="DPu-Mj-Hh6" firstAttribute="centerY" secondItem="sCp-Uf-hab" secondAttribute="centerY" id="mUc-kh-rSg"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
-                        </stackView>
-                        <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oIw-ek-q6b">
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oIw-ek-q6b">
                             <rect key="frame" x="0.0" y="21" width="400" height="378"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8JG-4l-DoW">
@@ -149,20 +101,16 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="gAh-Us-y0P" firstAttribute="centerX" secondItem="3PL-l1-OpK" secondAttribute="centerX" id="EeN-nY-tom"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="width" secondItem="3PL-l1-OpK" secondAttribute="width" id="PP8-wb-U7C"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="centerX" secondItem="3PL-l1-OpK" secondAttribute="centerX" id="fv3-f9-yr9"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="height" secondItem="3PL-l1-OpK" secondAttribute="height" multiplier="0.9" id="gMU-so-U2H"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="centerY" secondItem="3PL-l1-OpK" secondAttribute="centerY" id="kzq-b0-bHg"/>
-                        <constraint firstItem="gAh-Us-y0P" firstAttribute="width" secondItem="3PL-l1-OpK" secondAttribute="width" id="wvU-BB-pox"/>
-                        <constraint firstItem="gAh-Us-y0P" firstAttribute="centerY" secondItem="3PL-l1-OpK" secondAttribute="centerY" multiplier="1.15" id="zQl-IB-amQ"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="CCd-8D-Vfh" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.15" id="0dO-3r-V5S"/>
                 <constraint firstItem="CCd-8D-Vfh" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7yB-2g-987"/>
                 <constraint firstItem="CCd-8D-Vfh" firstAttribute="height" secondItem="hvd-0A-DbY" secondAttribute="height" id="Cym-Qo-MbB"/>
                 <constraint firstItem="CCd-8D-Vfh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Lzt-k4-wKO"/>
@@ -179,16 +127,9 @@
             <point key="canvasLocation" x="139" y="84"/>
         </view>
     </objects>
-    <designables>
-        <designable name="gzk-eW-9od"/>
-        <designable name="sCp-Uf-hab"/>
-    </designables>
     <resources>
-        <image name="camera.fill" catalog="system" width="128" height="94"/>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="photo" catalog="system" width="128" height="93"/>
-        <image name="trash.circle" catalog="system" width="128" height="121"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <image name="trash.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
