--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
@@ -26,10 +26,10 @@
                     <rect key="frame" x="0.0" y="510" width="400" height="90"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sKa-d9-uwA">
-                            <rect key="frame" x="157.5" y="2.5" width="85.5" height="85.5"/>
+                            <rect key="frame" x="166.5" y="11.5" width="67.5" height="67.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="f8l-6k-9TM">
-                                    <rect key="frame" x="0.0" y="0.5" width="85.5" height="84.5"/>
+                                    <rect key="frame" x="0.0" y="0.5" width="67.5" height="66.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="f8l-6k-9TM" secondAttribute="height" multiplier="1:1" id="8pa-LE-CAo"/>
                                     </constraints>
@@ -39,13 +39,16 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="sKa-d9-uwA" firstAttribute="height" secondItem="r6e-vP-YoV" secondAttribute="height" multiplier="0.95" id="4pA-u8-cPJ"/>
+                        <constraint firstItem="sKa-d9-uwA" firstAttribute="height" secondItem="r6e-vP-YoV" secondAttribute="height" multiplier="0.75" id="4pA-u8-cPJ"/>
                         <constraint firstItem="sKa-d9-uwA" firstAttribute="centerX" secondItem="r6e-vP-YoV" secondAttribute="centerX" id="TYS-GL-lje"/>
                         <constraint firstItem="sKa-d9-uwA" firstAttribute="centerY" secondItem="r6e-vP-YoV" secondAttribute="centerY" id="e4Z-Gs-IkA"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Km-sT-iLU">
                     <rect key="frame" x="0.0" y="0.0" width="400" height="90"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="90" id="2rV-6m-yaj"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -86,7 +89,6 @@
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="A5j-Dr-FVY"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Wls-GQ-otr"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Zb1-X8-F14"/>
-                <constraint firstItem="1Km-sT-iLU" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.15" id="brG-kW-hrY"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="top" secondItem="IYG-sb-Kve" secondAttribute="bottom" id="hEr-JN-wJ4"/>
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="hqP-LR-7g2"/>
                 <constraint firstItem="IYG-sb-Kve" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="muS-xV-86D"/>
