--- a/ThinkWhat/Modules/Controllers/Common/Banner/Content/Plain text/PlainBannerContent.xib
+++ b/ThinkWhat/Modules/Controllers/Common/Banner/Content/Plain text/PlainBannerContent.xib
@@ -20,13 +20,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEW-d2-shq">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
+                    <rect key="frame" x="75" y="0.0" width="325" height="150"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7h-jY-5Zi">
-                    <rect key="frame" x="362.5" y="0.0" width="37.5" height="37.5"/>
+                    <rect key="frame" x="0.0" y="37.5" width="75" height="75"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="p7h-jY-5Zi" secondAttribute="height" multiplier="1:1" id="1o2-VL-QP3"/>
@@ -35,13 +35,13 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="p7h-jY-5Zi" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.25" id="1PD-XC-BNJ"/>
+                <constraint firstItem="p7h-jY-5Zi" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="1PD-XC-BNJ"/>
+                <constraint firstItem="rEW-d2-shq" firstAttribute="leading" secondItem="p7h-jY-5Zi" secondAttribute="trailing" id="28h-vs-kuM"/>
                 <constraint firstAttribute="trailing" secondItem="rEW-d2-shq" secondAttribute="trailing" id="3Xf-Qh-81w"/>
-                <constraint firstItem="p7h-jY-5Zi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="5fC-TI-jZv"/>
-                <constraint firstAttribute="trailing" secondItem="p7h-jY-5Zi" secondAttribute="trailing" id="U6y-fA-XyE"/>
                 <constraint firstAttribute="bottom" secondItem="rEW-d2-shq" secondAttribute="bottom" id="cP8-As-YL8"/>
+                <constraint firstItem="p7h-jY-5Zi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="dbe-wU-kH4"/>
+                <constraint firstItem="p7h-jY-5Zi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="kbx-cs-Bs2"/>
                 <constraint firstItem="rEW-d2-shq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="n3d-Uo-w7W"/>
-                <constraint firstItem="rEW-d2-shq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qZW-na-vQm"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="72.991071428571431"/>
